lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -423,7 +423,7 @@ Resources:
         TargetGroupArn: !Ref WebServer8080Elbv2TargetGroup
       LoadBalancerArn: !Ref WwwDomainWebServerElbv2
       Port: 8080
-      Protocol: "TCP"
+      Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
 
   WebServer8081Elbv2Listener:
@@ -436,7 +436,7 @@ Resources:
         TargetGroupArn: !Ref WebServer8081Elbv2TargetGroup
       LoadBalancerArn: !Ref InternalDomainWebServerElbv2
       Port: 8081
-      Protocol: "TCP"
+      Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
 
   WebServerPublicDnsRecord:
