lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -290,7 +290,7 @@ Resources:
       IpAddressType: "ipv4"
       Name: "WebServer8080Elbv2TargetGroup"
       Port: 8080
-      Protocol: "TCP"
+      Protocol: "HTTP"
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
@@ -302,7 +302,7 @@ Resources:
       IpAddressType: "ipv4"
       Name: "WebServer8081Elbv2TargetGroup"
       Port: 8081
-      Protocol: "TCP"
+      Protocol: "HTTP"
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
