lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -16,7 +16,7 @@ Parameters:
   WebServerEc2AmiParam:
     Description: "Refer to https://aws.amazon.com/blogs/compute/query-for-the-latest-amazon-linux-ami-ids-using-aws-systems-manager-parameter-store/"
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
-    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-arm64-gp2'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
   VpcStackNameParam:
     Type: String
     Description: "The name of the VPC stack, in order to import values"
@@ -207,7 +207,7 @@ Resources:
         IamInstanceProfile:
           Arn: !GetAtt WebServerInstanceIamProfile.Arn
         ImageId: !Ref WebServerEc2AmiParam
-        InstanceType: a1.medium
+        InstanceType: t3.medium
         SecurityGroupIds:
         - !Ref WebServerSecurityGroup
         MetadataOptions:
@@ -294,7 +294,7 @@ Resources:
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
-        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
 
   WebServer8081Elbv2TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -306,7 +306,7 @@ Resources:
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
-        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
 
   WebServerAutoscalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
@@ -328,7 +328,7 @@ Resources:
       - !Ref WebServer8081Elbv2TargetGroup
       Tags: 
       - Key: "Name"
-        Value: "internet-Web"
+        Value: "WebAsg"
         PropagateAtLaunch: true
 
 
@@ -350,14 +350,14 @@ Resources:
       VpcId:
         Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
       SecurityGroupEgress:
-      - CidrIp: 0.0.0.0/0
+      - DestinationSecurityGroupId: !Ref WebServerSecurityGroup
         IpProtocol: tcp
-        FromPort: 0
-        ToPort: 65535
-      - CidrIp: 0.0.0.0/0
+        FromPort: 8080
+        ToPort: 8090
+      - DestinationSecurityGroupId: !Ref WebServerSecurityGroup
         IpProtocol: udp
-        FromPort: 0
-        ToPort: 65535
+        FromPort: 8080
+        ToPort: 8090
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 8080
