--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -284,29 +284,36 @@ Resources:
             Value: "Web-server"
 
 
-  WebServer8080Elbv2TargetGroup:
+#######################################################################################################################
+###                                                                                                                 ###
+###                                    WEB SERVER LOAD BALANCER - PRIVATE SUBNET                                    ###
+###                                                                                                                 ###
+#######################################################################################################################
+
+
+  PrivateVpcWebServer8080Elbv2TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties: 
       IpAddressType: "ipv4"
-      Name: "WebServer8080Elbv2TargetGroup"
+      Name: "PrivateVpcWebServer8080Elbv2TargetGroup"
       Port: 8080
       Protocol: "HTTP"
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
-        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
 
-  WebServer8081Elbv2TargetGroup:
+  PrivateVpcWebServer8081Elbv2TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties: 
       IpAddressType: "ipv4"
-      Name: "WebServer8081Elbv2TargetGroup"
+      Name: "PrivateVpcWebServer8081Elbv2TargetGroup"
       Port: 8081
       Protocol: "HTTP"
       TargetType: "instance"
       UnhealthyThresholdCount: 3
       VpcId:
-        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
 
   WebServerAutoscalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
@@ -324,13 +331,98 @@ Resources:
         - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
         - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3Id"
       TargetGroupARNs: 
-      - !Ref WebServer8080Elbv2TargetGroup
-      - !Ref WebServer8081Elbv2TargetGroup
+      - !Ref PrivateVpcWebServer8080Elbv2TargetGroup
+      - !Ref PrivateVpcWebServer8081Elbv2TargetGroup
       Tags: 
       - Key: "Name"
         Value: "WebAsg"
         PropagateAtLaunch: true
 
+  PrivateVpcWebServerElbv2SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: "PrivateVpcWebServerElbv2SecurityGroup"
+      GroupDescription: "Enable Web Server access on the inbound port for ELB"
+      VpcId:
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
+      SecurityGroupEgress:
+      - DestinationSecurityGroupId: !Ref WebServerSecurityGroup
+        IpProtocol: tcp
+        FromPort: 8080
+        ToPort: 8090
+      - DestinationSecurityGroupId: !Ref WebServerSecurityGroup
+        IpProtocol: udp
+        FromPort: 8080
+        ToPort: 8090
+      SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: 8080
+        ToPort: 8090
+        CidrIp: 
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
+      Tags:
+        - Key: Name
+          Value: PrivateVpcWebServerElbv2SecurityGroup
+
+  PrivateVpcWwwDomainWebServerElbv2:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties: 
+      IpAddressType: "ipv4"
+      Name: "PrivateVpcWwwDomainWebServerElbv2"
+      SubnetMappings: 
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3Id"
+      SecurityGroups: 
+      - !Ref PrivateVpcWebServerElbv2SecurityGroup
+      Type: "application"
+
+
+  PrivateVpcInternalDomainWebServerElbv2:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties: 
+      IpAddressType: "ipv4"
+      Name: "PrivateVpcInternalDomainWebServerElbv2"
+      SubnetMappings: 
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
+      - SubnetId:
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3Id"
+      SecurityGroups: 
+      - !Ref PrivateVpcWebServerElbv2SecurityGroup
+      Type: "application"
+  
+
+  PrivateVpcWebServer8080Elbv2Listener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties: 
+      DefaultActions: 
+      - Type: "forward"
+        TargetGroupArn: !Ref PrivateVpcWebServer8080Elbv2TargetGroup
+      LoadBalancerArn: !Ref PrivateVpcWwwDomainWebServerElbv2
+      Port: 8080
+      Protocol: "HTTP"
+
+  PrivateVpcWebServer8081Elbv2Listener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties: 
+      DefaultActions: 
+      - Type: "forward"
+        TargetGroupArn: !Ref PrivateVpcWebServer8081Elbv2TargetGroup
+      LoadBalancerArn: !Ref PrivateVpcInternalDomainWebServerElbv2
+      Port: 8081
+      Protocol: "HTTP"
+
+#######################################################################################################################
+###                                                                                                                 ###
+###                                         WEB SERVER PUBLIC LOAD BALANCER                                         ###
+###                                                                                                                 ###
+#######################################################################################################################
 
   TrustedInternetHostsPrefixList:
     Type: AWS::EC2::PrefixList
@@ -342,10 +434,42 @@ Resources:
       MaxEntries: 10
       PrefixListName: "TrustedInternetHostsPrefixList"
 
-  WebServerElbv2SecurityGroup:
+  PublicVpcWebServer8080Elbv2TargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties: 
+      IpAddressType: "ipv4"
+      Name: "PublicVpcWebServer8080Elbv2TargetGroup"
+      Port: 8080
+      Protocol: "HTTP"
+      TargetType: "alb"
+      Targets:
+      - AvailabilityZone: "all"
+        Id: !Ref PrivateVpcWwwDomainWebServerElbv2
+        Port: 8080
+      UnhealthyThresholdCount: 3
+      VpcId:
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+
+  PublicVpcWebServer8081Elbv2TargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties: 
+      IpAddressType: "ipv4"
+      Name: "PublicVpcWebServer8081Elbv2TargetGroup"
+      Port: 8081
+      Protocol: "HTTP"
+      TargetType: "alb"
+      Targets:
+      - AvailabilityZone: "all"
+        Id: !Ref PrivateVpcInternalDomainWebServerElbv2
+        Port: 8081
+      UnhealthyThresholdCount: 3
+      VpcId:
+        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+
+  PublicVpcWebServerElbv2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: "WebServerElbv2SecurityGroup"
+      GroupName: "PublicVpcWebServerElbv2SecurityGroup"
       GroupDescription: "Enable Web Server access on the inbound port for ELB"
       VpcId:
         Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
@@ -365,13 +489,13 @@ Resources:
         SourcePrefixListId: !Ref TrustedInternetHostsPrefixList
       Tags:
         - Key: Name
-          Value: WebServerElbv2SecurityGroup
+          Value: PublicVpcWebServerElbv2SecurityGroup
 
-  WwwDomainWebServerElbv2:
+  PublicVpcWwwDomainWebServerElbv2:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties: 
       IpAddressType: "ipv4"
-      Name: "WwwDomainWebServerElbv2"
+      Name: "PublicVpcWwwDomainWebServerElbv2"
       SubnetMappings: 
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1Id"
@@ -380,15 +504,15 @@ Resources:
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
       SecurityGroups: 
-      - !Ref WebServerElbv2SecurityGroup
+      - !Ref PublicVpcWebServerElbv2SecurityGroup
       Type: "application"
 
 
-  InternalDomainWebServerElbv2:
+  PublicVpcInternalDomainWebServerElbv2:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties: 
       IpAddressType: "ipv4"
-      Name: "InternalDomainWebServerElbv2"
+      Name: "PublicVpcInternalDomainWebServerElbv2"
       SubnetMappings: 
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1Id"
@@ -397,7 +521,7 @@ Resources:
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
       SecurityGroups: 
-      - !Ref WebServerElbv2SecurityGroup
+      - !Ref PublicVpcWebServerElbv2SecurityGroup
       Type: "application"
   
   WebServerAcmCertificate:
@@ -413,28 +537,28 @@ Resources:
       ValidationMethod: "DNS"
 
 
-  WebServer8080Elbv2Listener:
+  PublicVpcWebServer8080Elbv2Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties: 
       Certificates:
       - CertificateArn: !Ref WebServerAcmCertificate
       DefaultActions: 
       - Type: "forward"
-        TargetGroupArn: !Ref WebServer8080Elbv2TargetGroup
-      LoadBalancerArn: !Ref WwwDomainWebServerElbv2
+        TargetGroupArn: !Ref PublicVpcWebServer8080Elbv2TargetGroup
+      LoadBalancerArn: !Ref PublicVpcWwwDomainWebServerElbv2
       Port: 8080
       Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
 
-  WebServer8081Elbv2Listener:
+  PublicVpcWebServer8081Elbv2Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties: 
       Certificates:
       - CertificateArn: !Ref WebServerAcmCertificate
       DefaultActions: 
       - Type: "forward"
-        TargetGroupArn: !Ref WebServer8081Elbv2TargetGroup
-      LoadBalancerArn: !Ref InternalDomainWebServerElbv2
+        TargetGroupArn: !Ref PublicVpcWebServer8081Elbv2TargetGroup
+      LoadBalancerArn: !Ref PublicVpcInternalDomainWebServerElbv2
       Port: 8081
       Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
@@ -448,7 +572,7 @@ Resources:
         - "www.${DomainName}"
         - DomainName: !Ref PublicDnsNameParam
       ResourceRecords:
-      - !GetAtt WwwDomainWebServerElbv2.DNSName
+      - !GetAtt PublicVpcWwwDomainWebServerElbv2.DNSName
       TTL: 300
       Type: "CNAME"
 
@@ -461,9 +585,10 @@ Resources:
         - "internal.${DomainName}"
         - DomainName: !Ref PublicDnsNameParam
       ResourceRecords:
-      - !GetAtt InternalDomainWebServerElbv2.DNSName
+      - !GetAtt PublicVpcInternalDomainWebServerElbv2.DNSName
       TTL: 300
       Type: "CNAME"
+  
 
 #######################################################################################################################
 ###                                                                                                                 ###
