lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -386,6 +386,7 @@ Resources:
     Properties: 
       IpAddressType: "ipv4"
       Name: "PrivVpcInternalDomWebServerElbv2"
+      Scheme: "internal"
       SubnetMappings: 
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
